# agents

./: .agents-prefix.md  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
src/: error.rs  expr.rs  main.rs  parse.rs  project.rs  template.rs  test_support.rs
