[package]
name = "agents"
version = "0.0.1"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Generate AGENTS.md from project and global templates"
license = "MIT"
repository = "https://github.com/cortesi/agents"
readme = "README.md"
keywords = ["agents", "claude", "codex", "gemini", "agents.md", "claude.md"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
ignore = "0.4"
globset = "0.4"
similar = "2.5"
owo-colors = "4"
languages = "0.0.2"

[dev-dependencies]
tempfile = "3"
