[package]
name = "agentsmd"
version = "0.0.2"
edition = "2024"
authors = ["Aldo Cortesi <aldo@corte.si>"]
description = "Generate per-project AGENTS.md from templates"
license = "MIT"
repository = "https://github.com/cortesi/agentsmd"
readme = "README.md"
keywords = ["agents", "claude", "codex", "gemini"]


[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0.12"
ignore = "0.4"
globset = "0.4"
similar = "2.5"
owo-colors = "4"
languages = "0.0.2"
shellexpand = "3.1.1"

[dev-dependencies]
tempfile = "3"
